add webpack to pack, complete userAnswer

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MaJiang</title>
-	<script type="text/javascript" src="./node_modules/react/dist/react.js"></script>
-	<script type="text/javascript" src="./node_modules/react-dom/dist/react-dom.js"></script>
-	<script type="text/javascript" src="js/browser.min.js"></script>
-	<script type="text/javascript" src="spec/tt.js"></script>
-	<script type="text/babel" src="js/main.js">	</script>
+
+	
 	<link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
 
 	<div id="app"></div>
 </body>
+
+<script type="text/javascript" src="spec/tt.js"></script>
+<script type="text/javascript" src="./build/bundle.js"></script>
+
 </html>
