--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -47,8 +47,6 @@
 	<!--<script type="text/javascript" src="libs/matter-RenderLaya.js"></script>-->
 
 	<!--jsfile--startTag-->
-	<script src="js/net/events.js"></script>
-	<script src="js/model/Player.js"></script>
 	<script src="js/ui/layaUI.max.all.js"></script>
 	<script src="js/DialogScene.js"></script>
 	<script src="js/GameTableScene.js"></script>
@@ -57,6 +55,10 @@
 	<!--jsfile--endTag-->
 	<!--用户自定义顺序文件添加到这里-->
 	<!--jsfile--Custom-->
+	<script src="js/utils/PaiConvertor.js"></script>
+	<script src="js/utils/LayaUtils.js"></script>
+	<script src="js/net/events.js"></script>
+	<script src="js/model/Player.js"></script>
 	<script src="js/net/Manager.js"></script>
 	<!--jsfile--Custom-->
 	<!--自定义的js(src文件夹下)文件自动添加到下面jsfile模块标签里面里-->
