client da_pai ok

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -53,6 +53,8 @@
 	<!--jsfile--Custom-->
 	<script src="js/utils/PaiConvertor.js"></script>
 	<script src="js/utils/LayaUtils.js"></script>
+	<script src="js/media/AudioManager.js"></script>
+	<script src="js/media/GameSoundObserver.js"></script>
 	<script src="js/net/events.js"></script>
 	<script src="js/model/Player.js"></script>
 	<script src="js/DialogScene.js"></script>
