delete server_create_room_ok, don't need

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -51,12 +51,14 @@
 	<!--jsfile--endTag-->
 	<!--用户自定义顺序文件添加到这里-->
 	<!--jsfile--Custom-->
+	<script src="js/config.js"></script>
 	<script src="js/utils/PaiConvertor.js"></script>
 	<script src="js/utils/LayaUtils.js"></script>
 	<script src="js/media/AudioManager.js"></script>
 	<script src="js/media/GameSoundObserver.js"></script>
 	<script src="js/net/events.js"></script>
 	<script src="js/model/Player.js"></script>
+	<script src="js/model/Room.js"></script>
 	<script src="js/DialogScene.js"></script>
 	<script src="js/GameTableScene.js"></script>
 	<script src="js/LoginScene.js"></script>
