--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -63,6 +63,7 @@
 	<script src="js/GameTableScene.js"></script>
 	<script src="js/LoginScene.js"></script>
 	<script src="js/MainScene.js"></script>
+	<script src="js/OptDialogScene.js"></script>
 	<script src="js/net/Manager.js"></script>
 	<!--jsfile--Custom-->
 	<!--自定义的js(src文件夹下)文件自动添加到下面jsfile模块标签里面里-->
