test player hupai_data

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -47,6 +47,7 @@
 	<!--<script type="text/javascript" src="libs/matter-RenderLaya.js"></script>-->
 
 	<!--jsfile--startTag-->
+	<script src="js/net/g_events.js"></script>
 	<script src="js/ui/layaUI.max.all.js"></script>
 	<!--jsfile--endTag-->
 	<!--用户自定义顺序文件添加到这里-->
