test 弹出对话框中选择隐藏牌 ok

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -47,8 +47,10 @@
 	<!--<script type="text/javascript" src="libs/matter-RenderLaya.js"></script>-->
 
 	<!--jsfile--startTag-->
+	<script src="js/utils/PaiConverter.js"></script>
 	<script src="js/net/g_events.js"></script>
 	<script src="js/ui/layaUI.max.all.js"></script>
+	<script src="js/LiangSelectScene.js"></script>
 	<!--jsfile--endTag-->
 	<!--用户自定义顺序文件添加到这里-->
 	<!--jsfile--Custom-->
