can show winnerScene

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -50,7 +50,6 @@
 	<script src="js/utils/PaiConverter.js"></script>
 	<script src="js/net/g_events.js"></script>
 	<script src="js/ui/layaUI.max.all.js"></script>
-	<script src="js/LiangSelectScene.js"></script>
 	<!--jsfile--endTag-->
 	<!--用户自定义顺序文件添加到这里-->
 	<!--jsfile--Custom-->
@@ -67,6 +66,8 @@
 	<script src="js/LoginScene.js"></script>
 	<script src="js/MainScene.js"></script>
 	<script src="js/OptDialogScene.js"></script>
+	<script src="js/LiangSelectScene.js"></script>
+	<script src="js/WinnerScene.js"></script>
 	<script src="js/net/Manager.js"></script>
 	<!--jsfile--Custom-->
 	<!--自定义的js(src文件夹下)文件自动添加到下面jsfile模块标签里面里-->
