test sigui, add 杠选择对话框

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -63,6 +63,7 @@
 	<script src="js/model/Room.js"></script>
 	<script src="js/DialogScene.js"></script>
 	<script src="js/LiangSelectScene.js"></script>
+	<script src="js/GangSelectScene.js"></script>
 	<script src="js/WinnerScene.js"></script>
 	<script src="js/LoginScene.js"></script>
 	<script src="js/OptDialogScene.js"></script>
