new joinroom dialogue

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -50,6 +50,7 @@
 	<script src="js/utils/PaiConverter.js"></script>
 	<script src="js/net/g_events.js"></script>
 	<script src="js/ui/layaUI.max.all.js"></script>
+	<script src="js/JoinRoomDialogue.js"></script>
 	<!--jsfile--endTag-->
 	<!--用户自定义顺序文件添加到这里-->
 	<!--jsfile--Custom-->
