still error: length of null

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -61,7 +61,7 @@
 	<script src="js/net/events.js"></script>
 	<script src="js/model/Player.js"></script>
 	<script src="js/model/Room.js"></script>
-	<script src="js/JoinRoomDialogue.js"></script>
+	<script src="js/JoinRoomDialog.js"></script>
 	<script src="js/DialogScene.js"></script>
 	<script src="js/LiangSelectScene.js"></script>
 	<script src="js/GangSelectScene.js"></script>
